@@ -72,6 +72,9 @@ Core
 
 * Superfluous Vend::Interpolate::sort_cart function removed (#70).
 
+* set_slice now skips updates on existing records when we have only key
+  columns (#98).
+
 UserDB
 ------
 
